# HelpVia-API

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  QUICKSTART_UV.md  README.md  docker-compose.yml  justfile  pyproject.toml  setup-uv.sh
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  tickets.py
app/core/: __init__.py  auth.py  config.py  database.py  logging_config.py  security.py
app/models/: __init__.py  ticket.py  user.py
app/repositories/: ticket_repository.py  user_repository.py
app/schemas/: ticket.py  user.py
tests/: conftest.py  test_auth.py  test_tickets.py
